# qa_guru_7_18

./: README.md  pyproject.toml
